--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,10 +71,9 @@
     <Compile Include="Assets\Art\Script\MouseMarkScript.cs" />
     <Compile Include="Assets\QuickOutline\Scripts\Outline.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
-    <Compile Include="Assets\Art\Script\Coarse fliters System XunHuanGuan Outline.cs" />
-    <Compile Include="Assets\Art\Script\Coarse fliters System Outline.cs" />
     <Compile Include="Assets\Art\Script\TimelineController.cs" />
     <Compile Include="Assets\Art\Script\OnCollisionEnterScript.cs" />
+    <Compile Include="Assets\Art\Script\CoarseflitersSystemXunHuanGuanOutline.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_ExampleScript_01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMPro_InstructionOverlay.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeB.cs" />
@@ -105,6 +104,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark03.cs" />
     <Compile Include="Assets\Art\Script\Changche.cs" />
+    <Compile Include="Assets\Art\Script\CoarseflitersSystemOutline.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\DropdownSample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexColorCycler.cs" />
     <Compile Include="Assets\Art\Script\SandPilePhysicsIsTrigger.cs" />
